ARES linkages update, using yaml linkages instead of csv
Signed-off-by: Dhaval Salwala <dhaval.vinodbhai.salwala@ibm.com>

--- a/ran-ares-integration/src/ran_ares_integration/schema/risk_to_ares.yaml
+++ b/ran-ares-integration/src/ran_ares_integration/schema/risk_to_ares.yaml
@@ -8,6 +8,7 @@ default_curi_maps:
 imports:
   - linkml:types
   - common
+  - target_connector
 prefixes:
   linkml: https://w3id.org/linkml/
 default_range: string
@@ -90,12 +91,20 @@ classes:
       debug_mode:
         description: The output path for the evaluation results
         range: boolean
+      connector:
+        description: A Connector instance containing the evaluation model used.
+        any_of:
+          - range: HuggingFaceConnector
+        multivalued: true
+        inlined: true
+        inlined_as_list: false
+        required: false
       keyword_list_or_path:
         description: String describing the ARES evaluation type
         range: string
     slots:
       type
-
+        
   AresIntent:
     is_a: Entity
     description: >-
